--- a/EventsProject/src/main/resources/templates/index.html
+++ b/EventsProject/src/main/resources/templates/index.html
@@ -9,6 +9,7 @@
 		<title>Editorial by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 		<link rel="stylesheet" href="/css/main.css" />
 	</head>
 	<body class="is-preload">
@@ -21,13 +22,7 @@
 						<div class="inner">
 
 							<!-- Header -->
-								<header id="header">
-									<a href="index.html" class="logo"><strong>СПГЕ</strong> "Джон Атанасов"</a>
-									<ul class="icons">
-										<li><a href="https://www.facebook.com/spgesofia/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="https://www.instagram.com/spge.bg/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="https://www.linkedin.com/company/spge-bg/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
-									</ul>
+								<header th:replace="~{fragments/header.html}" id="header">
 								</header>
 
 							<!-- Banner -->
@@ -36,12 +31,17 @@
 										<header>
 											<h1>Събития в СПГЕ<br />
 											"Джон Атанасов"</h1>
-											<p>A free and fully responsive site template</p>
+											<h2 class="pt-4">УСПЯВАМЕ ВЪВ ВСИЧКО -<br/>
+												с грижа към всеки ученик,<br/>
+												с внимание към всеки учител,<br/>
+												с подкрепата на всеки родител.<br/>
+												ЗА НАС Е ВАЖЕН ВСЕКИ.
+											</h2>
+											<ul class="actions">
+												<li><a href="#" class="button primary">Вход</a></li>
+												<li><a href="#" class="button">Регистрация</a></li>
+											</ul>
 										</header>
-										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
-										<ul class="actions">
-											<li><a href="#" class="button big">Learn More</a></li>
-										</ul>
 									</div>
 									<span class="image object">
 										<img src="/images/spge-1.jpg" alt="" />
@@ -51,53 +51,13 @@
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>Erat lacinia</h2>
-									</header>
-									<div class="features">
-										<article>
-											<span class="icon fa-gem"></span>
-											<div class="content">
-												<h3>Portitor ullamcorper</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											</div>
-										</article>
-										<article>
-											<span class="icon solid fa-paper-plane"></span>
-											<div class="content">
-												<h3>Sapien veroeros</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											</div>
-										</article>
-										<article>
-											<span class="icon solid fa-rocket"></span>
-											<div class="content">
-												<h3>Quam lorem ipsum</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											</div>
-										</article>
-										<article>
-											<span class="icon solid fa-signal"></span>
-											<div class="content">
-												<h3>Sed magna finibus</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											</div>
-										</article>
-									</div>
-								</section>
-
-							<!-- Section -->
-								<section>
-									<header class="major">
-										<h2>Ipsum sed dolor</h2>
+										<h2>Последни събития</h2>
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="/images/pic01.jpg" alt="" /></a>
-											<h3>Interdum aenean</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
+											<a href="/events" class="image"><img src="/images/Capture14.png" alt="" /></a>
+											<h3><a href="/events">Участие на ученици от СПГЕ “Джон Атанасов” в Световен ден на географските информационни системи (ГИС) у нас</a></h3>
+											<p>На 20 ноември 2024г. се проведе 25-ият Световен ден на географските информационни системи (ГИС) у нас. В България се организира най-мащабният образователен ГИС конкурс „Изучаваме света с ГИС“ от Esri България под патронажа на МОН и в партньорство с над 30 водещи академични, браншови и медийни организации.</p>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="/images/pic02.jpg" alt="" /></a>
