--- a/EventsProject/src/main/resources/templates/event.html
+++ b/EventsProject/src/main/resources/templates/event.html
@@ -28,7 +28,7 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<h2>Участие на ученици от СПГЕ “Джон Атанасов” в Световен ден на географските информационни системи (ГИС) у нас</h2>
+										<h2 th:text="${page.title}">Участие на ученици от СПГЕ “Джон Атанасов” в Световен ден на географските информационни системи (ГИС) у нас</h2>
 									</header>
 
 									<hr/>
@@ -36,27 +36,25 @@
 									<div class="row">
 										<div class="col-3 col-12-medium">
 											<h3>Дата и час</h3>
-											<p>01/01/2025 12:00</p>
+											<p th:text="${page.date}">01/01/2025 12:00</p>
 										</div>
 										<div class="col-3 col-12-medium">
 											<h3>Организатор</h3>
-											<p>Директор</p>
+											<p th:text="${page.organiser}">Директор</p>
 										</div>
 										<div class="col-3 col-12-medium">
 											<h3>Гост/Лектор</h3>
-											<p>Г-н Иванов</p>
+											<p th:text="${page.guest}">Г-н Иванов</p>
 										</div>
 										<div class="col-3 col-12-medium">
 											<h3>Адрес</h3>
-											<p>СПГЕ</p>
+											<p th:text="${page.address}">СПГЕ</p>
 										</div>
 									</div>
 
-									<span class="image main"><img src="/images/Capture14.png" alt="" /></span>
+									<span class="image main"><img th:src="${page.image}" alt="" /></span>
 
-									<p>На 20 ноември 2024г. се проведе 25-ият Световен ден на географските информационни системи (ГИС) у нас. В България се организира най-мащабният образователен ГИС конкурс „Изучаваме света с ГИС“ от Esri България под патронажа на МОН и в партньорство с над 30 водещи академични, браншови и медийни организации.</p>
-									<p>Нашите ученици Любомир Аврамов и Александър Нетовски от IX В клас, подкрепени от ръководителите си Невенка Костова и Стоян Петков, участваха с проект, създаден чрез свободнодостъпните приложения на Arc GIS Online, на тема: „Животът на Менделеев – революционна стъпка в развитието на природните науки“.</p>
-									<p>Проектът е включен във виртуалната изложба на събитието:<a href="https://experience.arcgis.com/experience/4f3af2927ac14d3fb7488abf971112df">https://experience.arcgis.com/experience/4f3af2927ac14d3fb7488abf971112df</a></p>
+									<div th:utext="${page.text}"></div>
 								</section>
 
 						</div>
