--- a/EventsProject/src/main/resources/templates/fragments/sidebar.html
+++ b/EventsProject/src/main/resources/templates/fragments/sidebar.html
@@ -1,13 +1,5 @@
-<div id="sidebar">
+<div id="sidebar" xmlns:sec="http://www.w3.org/1999/xhtml" xmlns:th="http://www.w3.org/1999/xhtml">
     <div class="inner">
-
-        <!-- Search -->
-        <section id="search" class="alt">
-            <form method="post" action="#">
-                <label for="query"></label>
-                <input type="text" name="query" id="query" placeholder="Search" />
-            </form>
-        </section>
 
         <!-- Menu -->
         <nav id="menu">
@@ -15,20 +7,18 @@
                 <h2>Меню</h2>
             </header>
             <ul>
+                <li sec:authorize="hasRole('ADMIN')"><a th:href="@{/admin}">АДМИНИСТРАТОР</a></li>
                 <li><a href="/">Начална страница</a></li>
-                <li><a href="#">Вход</a></li>
-                <li><a href="#">Регистрация</a></li>
+                <li sec:authorize="isAnonymous()"><a href="/users/login">Вход</a></li>
+                <li sec:authorize="isAnonymous()"><a href="/users/register">Регистрация</a></li>
+                <li><a href="/events/upcoming">Предстоящи събития</a></li>
                 <li><a href="/events">Всички събития</a></li>
-                <li><a href="/generic">Generic</a></li>
-                <li><a href="/elements">Elements</a></li>
-                <li>
-                    <span class="opener">Submenu</span>
-                    <ul>
-                        <li><a href="#">Lorem Dolor</a></li>
-                        <li><a href="#">Ipsum Adipiscing</a></li>
-                        <li><a href="#">Tempus Magna</a></li>
-                        <li><a href="#">Feugiat Veroeros</a></li>
-                    </ul>
+                <li><a href="/clubs">Клубове</a></li>
+                <li><a href="/reviews">Отзиви</a></li>
+                <li sec:authorize="isAuthenticated()">
+                    <form th:method="POST" th:action="@{/users/logout}">
+                        <button class="button fit">Изход</button>
+                    </form>
                 </li>
             </ul>
         </nav>
@@ -52,7 +42,12 @@
 
         <!-- Footer -->
         <footer id="footer">
-            <p class="copyright">&copy; Untitled. All rights reserved. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+            <div class="mini-posts">
+                <article>
+                    <a href="https://buttercms.com/" class="image"><img src="https://cdn.buttercms.com/PGJPyIwaQ2KnOA8UyKfH" alt=""></a>
+                </article>
+            </div>
+            <p class="copyright">Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
         </footer>
 
     </div>
